   number.  CID 185299.



 - avoid an unneeded EXTEND() call when the FT1 has_chars()
   implementation returns 0. CID 185350.

 - avoid accessing a possibly NULL map from MakeMapObject() in a
   logging call. (GIF) CID 185296.

 - gradgen() allocated the wrong amount of space (always too much) for
   the color array.  CID 185291.

Imager 1.008 - 31 Dec 2018
============

 - moved EXIF handling from Imager::File::JPEG to core Imager
   This allows file formats that store EXIF data as blobs similarly
   to JPEG to re-use this code. (such as Imager::File::WEBP)

 - added some more file extensions to image file type mappings

 - added add_type_extensions() class method

Imager 1.007 - 24 Nov 2018
============

 - add png_compression_level tag for writing PNG files.

 - avoid flooring a second time in matrix transform interpolation.
   https://rt.cpan.org/Ticket/Display.html?id=124001

 - produce v2 metadata.
   Includes change from the ticket and updates to sub-modules.
   https://rt.cpan.org/Ticket/Display.html?id=127216

 - improve error reporting for the polygon() method

Imager 1.006 - 26 Aug 2017
============

 - the internal i_errors() function now correctly allocates the stack
   space needed for its result.
   https://rt.perl.org/rt3/Ticket/Display.html?id=131938

 - t/100-base/020-color.t now uses Imager::Test's test functions
   instead of its own.
   https://rt.cpan.org/Ticket/Display.html?id=111993

 - write_multi() now returns an error result (a false value) if called
   with a non-(Imager image object).  Previously it would typically
   crash.
   https://rt.cpan.org/Ticket/Display.html?id=117878

 - improve the documentation of the jpegquality parameter when
   writing JPEG files.

 - add code to mitigate CVE-2016-1238, Imager will no longer search the
   default current directory entry in @INC when searching for file
   format support modules.

Imager 1.005 - 16 Apr 2016
============

It's now been ten years since I switched to the new Changes file in